# pytest-retry

./: .gitignore  LICENSE  MANIFEST.in  README.md  dev-requirements.txt  pyproject.toml  requirements.txt  setup.cfg  tox.ini
.github/workflows/: tests.yaml
pytest_retry/: __init__.py  configs.py  hooks.py  retry_plugin.py  server.py
tests/: test_retry_plugin.py
